Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-30713

Ctrl+f doesn't work

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • Qt Creator 14.0.0
    • Qt Creator 14.0.0
    • All Other Issues
    • None
    • Linux/X11, macOS, Windows
    • d91d696e3 (master)

      Test steps:
      1. Create or open a new project
      2. Hit Ctrl+f

      Result:
      Find is not activated. Keyboard shortcut for Find conflicts with ModelEditor.

        For Gerrit Dashboard: QTCREATORBUG-30713
        # Subject Branch Project Status CR V

            gilead Jochen Becher
            jukkanokso Jukka Nokso
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes