ModelEditor: Toggle filter using Ctrl+Shift+L

Fixes: QTCREATORBUG-30713
Change-Id: I712b1a1f10b6f4c27d10f2179de8e3c5faa930ba
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>
Reviewed-by: David Schulz <david.schulz@qt.io>
Reviewed-by: Alessandro Portale <alessandro.portale@qt.io>